[package]
name = "ssr"
version = "0.0.1"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = "z"

[dependencies]
wasm-bindgen = "0.2.81"
dioxus = { version = "0.2.4", features = ["ssr"] }
dioxus-free-icons = { version = "0.5.0", features = ["font-awesome-brands", "font-awesome-solid"] }
