[package]
name = "ssr"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[dependencies]
wasm-bindgen = "0.2.92"
dioxus = { version = "0.5.1" }
dioxus-ssr = { version = "0.5.1" }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-brands", "font-awesome-solid"] }
